# rip

./: AGENTS.md  Cargo.toml
.githooks/: pre-commit
crates/rip-cli/: Cargo.toml
crates/rip-cli/src/: main.rs
crates/rip-kernel/src/: lib.rs
crates/rip-log/src/: lib.rs
crates/rip-openresponses/: Cargo.toml
crates/rip-openresponses/src/: lib.rs
crates/rip-provider-openresponses/: Cargo.toml
crates/rip-provider-openresponses/src/: lib.rs  request.rs  stream_transformers.rs
crates/rip-provider-openresponses/tests/: request.rs  stream_transformers.rs
crates/rip-tools/src/: builtins.rs  runtime.rs
crates/rip-tools/tests/: builtins.rs
crates/ripd/: Cargo.toml
crates/ripd/src/: main.rs  tool_runtime.rs
docs/: 00_index.md  01_north_star.md
docs/02_architecture/: capability_baseline.md  capability_matrix.md  component_map.md  surfaces.md
docs/03_contracts/: capabilities.md  capability_registry.md  event_frames.md  openresponses_compliance.md
docs/03_contracts/modules/phase-1/: 01_ripd_core.md  02_provider_adapters.md  03_tool_runtime.md  05_cli.md  06_server.md  07_event_log.md
docs/04_execution/: cli.md  server.md
docs/05_quality/: surface-parity.md  tests.md
docs/06_decisions/: ADR-0002-openresponses-json-only.md
docs/07_tasks/: openresponses_compliance.md  roadmap.md
docs/07_tasks/phase-1/: 00_phase-1_overview.md  06_cli.md  07_server.md
schemas/openresponses/: streaming_event_types.json
schemas/ripd/: openapi.json
scripts/: check  check-fast  install-hooks  update-openresponses-types
