[package]
name = "rip-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }

[dev-dependencies]
httpmock = "0.7"

[[bin]]
name = "rip"
path = "src/main.rs"
