[package]
name = "rip-provider-openresponses"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }

rip-openresponses = { path = "../rip-openresponses" }
rip-kernel = { path = "../rip-kernel" }

[dev-dependencies]
serde_json = "1.0"
