[package]
name = "ripd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1.6", features = ["v4"] }

rip-kernel = { path = "../rip-kernel" }
rip-log = { path = "../rip-log" }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.10"
tower = "0.5"
